* CCAccelerator : Added xbox/ouya ifdef tags to exclude them from building accelerometer support.
* Added XBox 360 project files for the framework and tests.
* tests: TileMapTest : removed all but the uncompressed test for xbox deployment.
* Added an xbox 360 version of the CSharpZipLib library that removes its encryption capabilities.
* tests: ParallaxTest : Added gamepad support to test pan and rotation of the map.
* tests: TileMapTest : Added gamepad support to test pan and rotation of the map.
* tests: Added a new initial test menu that responds to the d-pad and gamepad buttons.
* external lib: Added iOS and MacOS build libraries based upon MonoGame 3.0.0.0
* tests: Decompressed most of the tile map TMX test files and ran them on xbox 360.
* tests: Added an iOS build of the test content.
* tests: Updated the PSM project file to include all of the content files.
* tests: Removed the display of the assembly version for PSM.
* tests: Removed the PMA optimization directive for iOS. 
* tests: Fixed a file name error in the particles test.
* tests: Updated the XNB files for android and copied the plist and fnt xnb files over to iOS.
* CCTransitionFlipAngular : Obsoleted the 'create' method and added a parameter ctor.
* CCTransitionFlipX: Obsoleted the 'create' method and added a parameter ctor.
* CCTransitionFlipY : Obsoleted the 'create' method and added a parameter ctor.
* FlipXLeftOver, FlipYDownOver, FlipAngularRightOver, FlipYUpOver, FlipXRightOver : Added parameter ctor
* DrawManager: Changed the RenderTarget2D creation to set depth to Depth16 for iOS.
* CCTransitionScene : Added boolean to indicate whether the scene is a transition or not.
* CCDirector : Fixed erroneous hiding of the current scene when switching to a transition scene.
* XBox : Added the GitHubIssue5 test case to the project.
* Tests : Removed the assembly name display on windows phone.
* FadeWhiteTransition : Fixed broken blending state
