@@ -135,6 +135,7 @@ Global
 		{64725C5B-A1BC-4974-8538-A1158BABF572}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{64725C5B-A1BC-4974-8538-A1158BABF572}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{64725C5B-A1BC-4974-8538-A1158BABF572}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{64725C5B-A1BC-4974-8538-A1158BABF572}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
 		{64725C5B-A1BC-4974-8538-A1158BABF572}.Debug|Windows Phone.ActiveCfg = Debug|Any CPU
 		{64725C5B-A1BC-4974-8538-A1158BABF572}.Debug|x86.ActiveCfg = Debug|Any CPU
 		{64725C5B-A1BC-4974-8538-A1158BABF572}.Release|Android.ActiveCfg = Release|Any CPU
@@ -150,6 +151,7 @@ Global
 		{96E8B92D-DC5C-4F50-9AE1-0B76BE9BBD15}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{96E8B92D-DC5C-4F50-9AE1-0B76BE9BBD15}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{96E8B92D-DC5C-4F50-9AE1-0B76BE9BBD15}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{96E8B92D-DC5C-4F50-9AE1-0B76BE9BBD15}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
 		{96E8B92D-DC5C-4F50-9AE1-0B76BE9BBD15}.Debug|Windows Phone.ActiveCfg = Debug|Any CPU
 		{96E8B92D-DC5C-4F50-9AE1-0B76BE9BBD15}.Debug|x86.ActiveCfg = Debug|Any CPU
 		{96E8B92D-DC5C-4F50-9AE1-0B76BE9BBD15}.Release|Android.ActiveCfg = Release|Any CPU
