@@ -20,13 +20,64 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 ****************************************************************************/
-
+using System.Collections.Generic;
+using Microsoft.Xna.Framework.Graphics;
 using System.Globalization;
+#if !WINDOWS_PHONE && !XBOX && !WINDOWS
+#if MONOMAC
+using MonoMac.OpenGL;
+#elif WINDOWSGL || LINUX
+using OpenTK.Graphics.OpenGL;
+#else
+using OpenTK.Graphics.ES20;
+using BeginMode = OpenTK.Graphics.ES20.All;
+using EnableCap = OpenTK.Graphics.ES20.All;
+using TextureTarget = OpenTK.Graphics.ES20.All;
+using BufferTarget = OpenTK.Graphics.ES20.All;
+using BufferUsageHint = OpenTK.Graphics.ES20.All;
+using DrawElementsType = OpenTK.Graphics.ES20.All;
+using GetPName = OpenTK.Graphics.ES20.All;
+using FramebufferErrorCode = OpenTK.Graphics.ES20.All;
+using FramebufferTarget = OpenTK.Graphics.ES20.All;
+using FramebufferAttachment = OpenTK.Graphics.ES20.All;
+using RenderbufferTarget = OpenTK.Graphics.ES20.All;
+using RenderbufferStorage = OpenTK.Graphics.ES20.All;
+#endif
+#endif
 
 namespace cocos2d
 {
     public class ccUtils
     {
+#if !WINDOWS_PHONE && !XBOX
+#if OPENGL
+        private static List<string> _GLExtensions = null;
+
+        public static List<string> GetGLExtensions()
+        {
+            // Setup extensions.
+        if(_GLExtensions == null) {
+            List<string> extensions = new List<string>();
+#if GLES
+            var extstring = GL.GetString(RenderbufferStorage.Extensions);            			
+#else
+            var extstring = GL.GetString(StringName.Extensions);
+#endif
+            GraphicsExtensions.CheckGLError();
+            if (!string.IsNullOrEmpty(extstring))
+            {
+                extensions.AddRange(extstring.Split(' '));
+                CCLog.Log("Supported GL extensions:");
+                foreach (string extension in extensions)
+                    CCLog.Log(extension);
+            }
+        _GLExtensions = extensions;
+        }
+            return _GLExtensions;
+        }
+#endif
+#endif
+
         /// <summary>
         /// Returns the Cardinal Spline position for a given set of control points, tension and time
         /// </summary>
@@ -121,6 +172,24 @@ namespace cocos2d
         /// <param name="x">The base of the POT test</param>
         /// <returns>The next power of 2 (1, 2, 4, 8, 16, 32, 64, 128, etc)</returns>
         public static long ccNextPOT(long x)
+        {
+            x = x - 1;
+            x = x | (x >> 1);
+            x = x | (x >> 2);
+            x = x | (x >> 4);
+            x = x | (x >> 8);
+            x = x | (x >> 16);
+            return x + 1;
+        }
+
+        /// <summary>
+        /// Returns the next Power of Two for the given value. If x = 3, then this returns 4.
+        /// If x = 4 then 4 is returned. If the value is a power of two, then the same value
+        /// is returned.
+        /// </summary>
+        /// <param name="x">The base of the POT test</param>
+        /// <returns>The next power of 2 (1, 2, 4, 8, 16, 32, 64, 128, etc)</returns>
+        public static int ccNextPOT(int x)
         {
             x = x - 1;
             x = x | (x >> 1);
