@@ -1740,10 +1740,6 @@
     <AndroidResource Include="Resources\Drawable\Icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\cocos2d\cocos2d.Android.csproj">
-      <Project>{64725C5B-A1BC-4974-8538-A1158BABF572}</Project>
-      <Name>cocos2d.Android</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.Android.csproj">
       <Project>{BA9476CF-99BA-4D03-92F2-73D2C5E58883}</Project>
       <Name>MonoGame.Framework.Android</Name>
@@ -1751,6 +1747,10 @@
     <ProjectReference Include="..\..\MonoGame\ThirdParty\Lidgren.Network\Lidgren.Network.Android.csproj">
       <Project>{565129E0-4EE5-4F6F-B403-C3484C9740BE}</Project>
       <Name>Lidgren.Network.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\cocos2d\cocos2d.Android.csproj">
+      <Project>{64725C5B-A1BC-4974-8538-A1158BABF572}</Project>
+      <Name>cocos2d.Android</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
